--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
     <head> 
 			<meta charset="utf-8">
-			<title>Rust Is Inevitable</title>
+			<title>🦀 Rust Is Inevitable 🦀</title>
   		<link data-trunk rel="css" href="styles.css">
 		</head>
     <body>
